@@ -32,6 +32,9 @@ BUGFIXES:
   ZOOKEEPER-734. QuorumPeerTestBase.java and ZooKeeperServerMainTest.java
   do not handle windows path correctly (Vishal K via phunt)
 
+  ZOOKEEPER-754. numerous misspellings "succesfully"
+  (Savu Andrei via phunt)
+
 IMPROVEMENTS:
   ZOOKEEPER-724. Improve junit test integration - log harness information 
   (phunt via mahadev)
